# FigmaFlow-MCP

./: .gitignore  API_KEY_FLOW.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PACKAGING.md  README.md  SETUP.md  TESTING.md  USER_GUIDE.md  WIDGET_GENERATION_STATUS.md
mcp-server/: .env.example  .gitignore  AI_MODEL_GUIDE.md  README.md  TOKEN_FILTER_ANALYSIS.md  pyproject.toml  quick_test.py  run_server.sh  test_e2e_flow.py  test_fail_fast.py  test_final_integration.py  test_litellm.py  test_mcp_protocol.py  test_model_switch.py  test_production_improvements.py  test_setup.py  test_token_filter.py  test_widget_generation.py  test_with_real_data.py
mcp-server/src/: __init__.py
mcp-server/src/ai/: client.py  prompts.py
mcp-server/src/figma/: __init__.py  cache.py  client.py  mock_data.py  parser.py
mcp-server/src/generators/: __init__.py  qa.py  test.py  widget.py
mcp-server/src/mcp/: __init__.py  server.py  tools.py
mcp-server/src/utils/: config_validator.py  errors.py  logger.py  token_filter.py  validation.py
mcp-server/tests/: test_figma_client.py
plan/: development_plan.md  prd.txt
vscode-extension/: .gitignore  CONFIGURATION.md  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
vscode-extension/src/commands/: generateTests.ts  generateWidget.ts  setupConfiguration.ts
vscode-extension/src/mcp/: client.ts
vscode-extension/src/utils/: environment.ts
